# physics_engine

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  requirements.txt
.github/workflows/: main.yml
graphics/: Resources.cpp  Resources.h  Texture2D.cpp  Texture2D.h  camera.cpp  camera.h  imgui.ini  models.cpp  models.h  scene.cpp  scene.h  sceneContext.h  shaderProgram.cpp  shaderProgram.h  shapes.cpp  shapes.h  textures.cpp  textures.h  window.cpp  window.h
graphics/public-libs/: obj_loader.h
objects/: BasicObject.cpp  BasicObject.h  CloudParticuleObject.cpp  CloudParticuleObject.h  CollisionObject.cpp  CollisionObject.h  F1Object.cpp  F1Object.h  FloorObject.cpp  FloorObject.h  ParticuleObject.cpp  ParticuleObject.h  RenderObject.cpp  RenderObject.h
objects/collision-detection/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.cpp  BoundingVolume.h  CollisionMesh.cpp  CollisionMesh.h  SAT_collisions.cpp  SAT_collisions.h
physics/: forces.cpp  forces.h  physicsState.cpp  physicsState.h
shaders/: boundingVolume.fs.glsl  boundingVolume.geom.glsl  boundingVolume.vs.glsl  f1CarShader.fs.glsl  f1CarShader.vs.glsl  feedback.ts.glsl  floor.fs.glsl  floor.vs.glsl  objectShader.fs.glsl  objectShader.vs.glsl  particule.fs.glsl  particule.vs.glsl
tests/: CMakeLists.txt  my_test.cpp
